test_regress/t/t_event_control_expr_unsup.out
%Error-UNSUPPORTED: t/t_event_control_expr_unsup.v:20:20: Unsupported: Impure function calls in sensitivity lists
   20 |   always @(posedge foo());
      |                    ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_event_control_expr_unsup.v:21:20: Unsupported: Impure function calls in sensitivity lists
   21 |   always @(posedge finish_foo());
      |                    ^~~~~~~~~~
%Error: Exiting due to
